--- a/ЕГЭ по информатике/Задание 09/Теория по заданию 9. Электронные таблицы.md
+++ b/ЕГЭ по информатике/Задание 09/Теория по заданию 9. Электронные таблицы.md
@@ -81,9 +81,7 @@
 #### 4.1. Треугольники
 1. **Неравенство треугольника:**
    - Сумма любых двух сторон должна быть больше третьей стороны:
-     $$
-     a + b > c,\quad a + c > b,\quad b + c > a
-     $$
+     $$a + b > c,\quad a + c > b,\quad b + c > a$$
 
 2. **Неравенство четырехугольника:**
    - Сумма любых трех сторон больше четвертой стороны:
