Update Теория по заданию 9. Электронные таблицы.md

--- a/ЕГЭ по информатике/Задание 09/Теория по заданию 9. Электронные таблицы.md
+++ b/ЕГЭ по информатике/Задание 09/Теория по заданию 9. Электронные таблицы.md
@@ -85,31 +85,21 @@
 
 2. **Неравенство четырехугольника:**
    - Сумма любых трех сторон больше четвертой стороны:
-     $$
-     a + b + c > d
-     $$
+     $$a + b + c > d$$
    - Для любого $n$-угольника:
-     $$
-     \text{Сумма длин сторон} > 2 \cdot \text{Максимальная сторона}
-     $$
+     $$\text{Сумма длин сторон} > 2 \cdot \text{Максимальная сторона}$$
 
 3. **Теорема косинусов:**
-   $$
-   c^2 = a^2 + b^2 - 2ab\cos(\alpha)
-   $$
+   $$c^2 = a^2 + b^2 - 2ab\cos(\alpha)$$
    - $\alpha < 90^\circ$: тупоугольный треугольник.
    - $\alpha = 90^\circ$: прямоугольный треугольник.
    - $\alpha > 90^\circ$: остроугольный треугольник.
 
 4. **Типы треугольников:**
    - **Равнобедренный треугольник:**
-     $$
-     (a + b > c) \wedge ((a = b) \lor (b = c))
-     $$
+     $$(a + b > c) \wedge ((a = b) \lor (b = c))$$
    - **Равносторонний треугольник:**
-     $$
-     (a + b > c) \wedge (a = b) \wedge (b = c)
-     $$
+     $$(a + b > c) \wedge (a = b) \wedge (b = c)$$
 
 ---
 
