--- a/ЕГЭ по информатике/Задание 11/Теория по заданию 11.md
+++ b/ЕГЭ по информатике/Задание 11/Теория по заданию 11.md
@@ -4,10 +4,10 @@
 
 #### Формулы для кодирования информации
 1. **Количество значений и бит:**
-   $$N = 2^n, \quad \text{где } N \text{ — количество значений, } n \text{ — количество бит.}$$
+   $N = 2^n, \quad \text{где } N \text{ — количество значений, } n \text{ — количество бит.}$
 
 2. **Расчет минимального количества бит для представления $N$ значений:**
-   $$n = \lceil \log_2(N) \rceil, \quad \text{где } \lceil x \rceil \text{ — округление вверх.}$$
+   $n = \lceil \log_2(N) \rceil, \quad \text{где } \lceil x \rceil \text{ — округление вверх.}$
 
 3. **Перевод битов в байты:**
    - 8 бит = 1 байт.
@@ -25,9 +25,9 @@
 
 **Решение:**
 4. Общее количество значений:
-   $$N = 10 + 1010 = 1020.$$
+   $N = 10 + 1010 = 1020.$
 5. Минимальное количество бит:
-   $$n = \lceil \log_2(1020) \rceil = 10 \quad (\text{так как } 2^{10} = 1024 > 1020).$$
+   $n = \lceil \log_2(1020) \rceil = 10 \quad (\text{так как } 2^{10} = 1024 > 1020).$
 
 ---
 
@@ -38,12 +38,12 @@
 
 **Решение:**
 6. Количество бит на один символ:
-   $$\text{char\_bits} = \lceil \log_2(kod) \rceil,$$
+   $\text{char\_bits} = \lceil \log_2(kod) \rceil,$
    где $kod$ — количество символов в кодировке.
 7. Общий размер пароля в битах:
-   $$\text{total\_bits} = 15 \cdot \text{char\_bits}.$$
+   $\text{total\_bits} = 15 \cdot \text{char\_bits}.$
 8. Перевод битов в байты с округлением вверх:
-   $$\text{size\_bytes} = \lceil \text{total\_bits} / 8 \rceil.$$
+   $\text{size\_bytes} = \lceil \text{total\_bits} / 8 \rceil.$
 
 Пример реализации на Python:
 ```python
