Update Теория по заданию 11.md

--- a/ЕГЭ по информатике/Задание 11/Теория по заданию 11.md
+++ b/ЕГЭ по информатике/Задание 11/Теория по заданию 11.md
@@ -86,25 +86,15 @@ print(passwords_size)
 
 **Решение:**
 9. Количество символов в кодировке:
-   $$
-   kod = 26 + 26 = 52.
-   $$
+   $$kod = 26 + 26 = 52.$$
 10. Количество бит на один символ:
-   $$
-   \text{chat\_bits} = \lceil \log_2(kod) \rceil.
-   $$
+   $$\text{chat\_bits} = \lceil \log_2(kod) \rceil.$$
 11. Размер пароля в байтах:
-   $$
-   \text{pas\_bytes} = \lceil 7 \cdot \text{chat\_bits} / 8 \rceil.
-   $$
+   $$\text{pas\_bytes} = \lceil 7 \cdot \text{chat\_bits} / 8 \rceil.$$
 12. Общий размер данных для одного пользователя:
-   $$
-   \text{user\_size} = \text{pas\_bytes} + 12.
-   $$
+   $$\text{user\_size} = \text{pas\_bytes} + 12.$$
 13. Проверка условия:
-   $$
-   k \cdot \text{user\_size} \leq 2 \cdot 1024.
-   $$
+   $$k \cdot \text{user\_size} \leq 2 \cdot 1024.$$
 
 Пример реализации на Python:
 ```python
