Update Теория по заданию 11.md

--- a/ЕГЭ по информатике/Задание 11/Теория по заданию 11.md
+++ b/ЕГЭ по информатике/Задание 11/Теория по заданию 11.md
@@ -4,14 +4,14 @@
 
 #### Формулы для кодирования информации
 1. **Количество значений и бит:**
-   $$
+   ```math
    N = 2^n, \quad \text{где } N \text{ — количество значений, } n \text{ — количество бит.}
-   $$
+   ```
 
 2. **Расчет минимального количества бит для представления $N$ значений:**
-   $$
+   ```math
    n = \lceil \log_2(N) \rceil, \quad \text{где } \lceil x \rceil \text{ — округление вверх.}
-   $$
+   ```
 
 3. **Перевод битов в байты:**
    - 8 бит = 1 байт.
@@ -29,13 +29,13 @@
 
 **Решение:**
 4. Общее количество значений:
-   $$
+   ```math
    N = 10 + 1010 = 1020.
-   $$
+   ```
 5. Минимальное количество бит:
-   $$
+   ```math
    n = \lceil \log_2(1020) \rceil = 10 \quad (\text{так как } 2^{10} = 1024 > 1020).
-   $$
+   ```
 
 ---
 
@@ -46,18 +46,18 @@
 
 **Решение:**
 6. Количество бит на один символ:
-   $$
+   ```math
    \text{char\_bits} = \lceil \log_2(kod) \rceil,
-   $$
+   ```
    где $kod$ — количество символов в кодировке.
 7. Общий размер пароля в битах:
-   $$
+   ```math
    \text{total\_bits} = 15 \cdot \text{char\_bits}.
-   $$
+   ```
 8. Перевод битов в байты с округлением вверх:
-   $$
+   ```math
    \text{size\_bytes} = \lceil \text{total\_bits} / 8 \rceil.
-   $$
+   ```
 
 Пример реализации на Python:
 ```python
@@ -86,21 +86,21 @@ print(passwords_size)
 
 **Решение:**
 9. Количество символов в кодировке:
-   $$
+   ```math
    kod = 26 + 26 = 52.
-   $$
+   ```
 10. Количество бит на один символ:
-   $$
+   ```math
    \text{chat\_bits} = \lceil \log_2(kod) \rceil.
-   $$
+   ```
 11. Размер пароля в байтах:
-   $$
+   ```math
    \text{pas\_bytes} = \lceil 7 \cdot \text{chat\_bits} / 8 \rceil.
-   $$
+   ```
 12. Общий размер данных для одного пользователя:
-   $$
+   ```math
    \text{user\_size} = \text{pas\_bytes} + 12.
-   $$
+   ```
 13. Проверка условия:
    ```math
    k \cdot \text{user\_size} \leq 2 \cdot 1024.
