Update Теория по заданию 11.md

--- a/ЕГЭ по информатике/Задание 11/Теория по заданию 11.md
+++ b/ЕГЭ по информатике/Задание 11/Теория по заданию 11.md
@@ -1,22 +1,24 @@
+```markdown
 ### Кодирование информации и расчет объема данных
 
 ---
 
 #### Формулы для кодирования информации
-1. **Количество значений и бит:**
-   ```math
+
+1. **Количество значений и бит:**  
+   $$
    N = 2^n, \quad \text{где } N \text{ — количество значений, } n \text{ — количество бит.}
-   ```
+   $$
 
-2. **Расчет минимального количества бит для представления $N$ значений:**
-   ```math
+2. **Расчет минимального количества бит для представления $N$ значений:**  
+   $$
    n = \lceil \log_2(N) \rceil, \quad \text{где } \lceil x \rceil \text{ — округление вверх.}
-   ```
+   $$
 
-3. **Перевод битов в байты:**
-   - 8 бит = 1 байт.
-   - 1024 байта = 1 килобайт (КБ).
-   - 1024 килобайта = 1 мегабайт (МБ).
+3. **Перевод битов в байты:**  
+   - 8 бит = 1 байт.  
+   - 1024 байта = 1 килобайт (КБ).  
+   - 1024 килобайта = 1 мегабайт (МБ).  
 
 ---
 
@@ -27,15 +29,15 @@
 **Условие:**  
 Дан алфавит, состоящий из десятичных символов (10 штук) и дополнительных 1010 символов. Необходимо определить минимальное количество бит для представления всех символов.
 
-**Решение:**
-4. Общее количество значений:
-   ```math
+**Решение:**  
+1. Общее количество значений:  
+   $$
    N = 10 + 1010 = 1020.
-   ```
-5. Минимальное количество бит:
-   ```math
+   $$  
+2. Минимальное количество бит:  
+   $$
    n = \lceil \log_2(1020) \rceil = 10 \quad (\text{так как } 2^{10} = 1024 > 1020).
-   ```
+   $$  
 
 ---
 
@@ -44,22 +46,22 @@
 **Условие:**  
 Пароль состоит из 15 символов. Каждый символ кодируется минимально возможным числом бит. Определите размер одного пароля в байтах.
 
-**Решение:**
-6. Количество бит на один символ:
-   ```math
+**Решение:**  
+1. Количество бит на один символ:  
+   $$
    \text{char\_bits} = \lceil \log_2(kod) \rceil,
-   ```
-   где $kod$ — количество символов в кодировке.
-7. Общий размер пароля в битах:
-   ```math
+   $$  
+   где $kod$ — количество символов в кодировке.  
+2. Общий размер пароля в битах:  
+   $$
    \text{total\_bits} = 15 \cdot \text{char\_bits}.
-   ```
-8. Перевод битов в байты с округлением вверх:
-   ```math
+   $$  
+3. Перевод битов в байты с округлением вверх:  
+   $$
    \text{size\_bytes} = \lceil \text{total\_bits} / 8 \rceil.
-   ```
+   $$  
 
-Пример реализации на Python:
+**Пример реализации на Python:**  
 ```python
 from math import ceil, log2
 
@@ -84,29 +86,29 @@ print(passwords_size)
 **Условие:**  
 Необходимо определить максимальное количество пользователей $k$, для которых общая память не превышает 2 КБайт. Для каждого пользователя выделяется место под пароль и дополнительную информацию.
 
-**Решение:**
-9. Количество символов в кодировке:
-   ```math
+**Решение:**  
+1. Количество символов в кодировке:  
+   $$
    kod = 26 + 26 = 52.
-   ```
-10. Количество бит на один символ:
-   ```math
+   $$  
+2. Количество бит на один символ:  
+   $$
    \text{chat\_bits} = \lceil \log_2(kod) \rceil.
-   ```
-11. Размер пароля в байтах:
-   ```math
+   $$  
+3. Размер пароля в байтах:  
+   $$
    \text{pas\_bytes} = \lceil 7 \cdot \text{chat\_bits} / 8 \rceil.
-   ```
-12. Общий размер данных для одного пользователя:
-   ```math
+   $$  
+4. Общий размер данных для одного пользователя:  
+   $$
    \text{user\_size} = \text{pas\_bytes} + 12.
-   ```
-13. Проверка условия:
-   ```math
+   $$  
+5. Проверка условия:  
+   $$
    k \cdot \text{user\_size} \leq 2 \cdot 1024.
-   ```
+   $$  
 
-Пример реализации на Python:
+**Пример реализации на Python:**  
 ```python
 from math import ceil, log2
 
