Update Теория по заданию 11.md

--- a/ЕГЭ по информатике/Задание 11/Теория по заданию 11.md
+++ b/ЕГЭ по информатике/Задание 11/Теория по заданию 11.md
@@ -5,9 +5,7 @@
 #### Формулы для кодирования информации
 
 1. **Количество значений и бит:**  
-   $$
-   N = 2^n, \quad \text{где } N \text{ — количество значений, } n \text{ — количество бит.}
-   $$
+   $$N = 2^n, \quad \text{где } N \text{ — количество значений, } n \text{ — количество бит.}$$
 
 2. **Расчет минимального количества бит для представления $N$ значений:**  
    $$
