--- a/ЕГЭ по информатике/Задание 11/Теория по заданию 11.md
+++ b/ЕГЭ по информатике/Задание 11/Теория по заданию 11.md
@@ -8,9 +8,7 @@
    $$N = 2^n, \quad \text{где } N \text{ — количество значений, } n \text{ — количество бит.}$$
 
 2. **Расчет минимального количества бит для представления $N$ значений:**  
-   $$
-   n = \lceil \log_2(N) \rceil, \quad \text{где } \lceil x \rceil \text{ — округление вверх.}
-   $$
+   $$n = \lceil \log_2(N) \rceil, \quad \text{где } \lceil x \rceil \text{ — округление вверх.}$$
 
 3. **Перевод битов в байты:**  
    - 8 бит = 1 байт.  
@@ -28,13 +26,9 @@
 
 **Решение:**  
 1. Общее количество значений:  
-   $$
-   N = 10 + 1010 = 1020.
-   $$  
+   $$N = 10 + 1010 = 1020.$$  
 2. Минимальное количество бит:  
-   $$
-   n = \lceil \log_2(1020) \rceil = 10 \quad (\text{так как } 2^{10} = 1024 > 1020).
-   $$  
+   $$n = \lceil \log_2(1020) \rceil = 10 \quad (\text{так как } 2^{10} = 1024 > 1020).$$  
 
 ---
 
@@ -45,18 +39,12 @@
 
 **Решение:**  
 1. Количество бит на один символ:  
-   $$
-   \text{char\_bits} = \lceil \log_2(kod) \rceil,
-   $$  
+   $$\text{char\_bits} = \lceil \log_2(kod) \rceil,$$  
    где $kod$ — количество символов в кодировке.  
 2. Общий размер пароля в битах:  
-   $$
-   \text{total\_bits} = 15 \cdot \text{char\_bits}.
-   $$  
+   $$\text{total\_bits} = 15 \cdot \text{char\_bits}.$$  
 3. Перевод битов в байты с округлением вверх:  
-   $$
-   \text{size\_bytes} = \lceil \text{total\_bits} / 8 \rceil.
-   $$  
+   $$\text{size\_bytes} = \lceil \text{total\_bits} / 8 \rceil.$$  
 
 **Пример реализации на Python:**  
 ```python
@@ -85,25 +73,15 @@ print(passwords_size)
 
 **Решение:**  
 1. Количество символов в кодировке:  
-   $$
-   kod = 26 + 26 = 52.
-   $$  
+   $$kod = 26 + 26 = 52.$$  
 2. Количество бит на один символ:  
-   $$
-   \text{chat\_bits} = \lceil \log_2(kod) \rceil.
-   $$  
+   $$\text{chat\_bits} = \lceil \log_2(kod) \rceil.$$  
 3. Размер пароля в байтах:  
-   $$
-   \text{pas\_bytes} = \lceil 7 \cdot \text{chat\_bits} / 8 \rceil.
-   $$  
+   $$\text{pas\_bytes} = \lceil 7 \cdot \text{chat\_bits} / 8 \rceil.$$  
 4. Общий размер данных для одного пользователя:  
-   $$
-   \text{user\_size} = \text{pas\_bytes} + 12.
-   $$  
+   $$\text{user\_size} = \text{pas\_bytes} + 12.$$  
 5. Проверка условия:  
-   $$
-   k \cdot \text{user\_size} \leq 2 \cdot 1024.
-   $$  
+   $$k \cdot \text{user\_size} \leq 2 \cdot 1024.$$  
 
 **Пример реализации на Python:**  
 ```python
