Update Теория по заданию 11.md

--- a/ЕГЭ по информатике/Задание 11/Теория по заданию 11.md
+++ b/ЕГЭ по информатике/Задание 11/Теория по заданию 11.md
@@ -39,12 +39,12 @@
 
 **Решение:**  
 1. Количество бит на один символ:  
-   $$\text{char\_bits} = \lceil \log_2(kod) \rceil,$$  
+   $$\text{char bits} = \lceil \log_2(kod) \rceil,$$  
    где $kod$ — количество символов в кодировке.  
 2. Общий размер пароля в битах:  
-   $$\text{total\_bits} = 15 \cdot \text{char\_bits}.$$  
+   $$\text{total bits} = 15 \cdot \text{char bits}.$$  
 3. Перевод битов в байты с округлением вверх:  
-   $$\text{size\_bytes} = \lceil \text{total\_bits} / 8 \rceil.$$  
+   $$\text{size bytes} = \lceil \text{total bits} / 8 \rceil.$$  
 
 **Пример реализации на Python:**  
 ```python
@@ -75,13 +75,13 @@ print(passwords_size)
 1. Количество символов в кодировке:  
    $$kod = 26 + 26 = 52.$$  
 2. Количество бит на один символ:  
-   $$\text{chat\_bits} = \lceil \log_2(kod) \rceil.$$  
+   $$\text{chat bits} = \lceil \log_2(kod) \rceil.$$  
 3. Размер пароля в байтах:  
-   $$\text{pas\_bytes} = \lceil 7 \cdot \text{chat\_bits} / 8 \rceil.$$  
+   $$\text{pas bytes} = \lceil 7 \cdot \text{chat bits} / 8 \rceil.$$  
 4. Общий размер данных для одного пользователя:  
-   $$\text{user\_size} = \text{pas\_bytes} + 12.$$  
+   $$\text{user size} = \text{pas bytes} + 12.$$  
 5. Проверка условия:  
-   $$k \cdot \text{user\_size} \leq 2 \cdot 1024.$$  
+   $$k \cdot \text{user size} \leq 2 \cdot 1024.$$  
 
 **Пример реализации на Python:**  
 ```python
