Update Теория по заданию 12.md

--- a/ЕГЭ по информатике/Задание 12/Теория по заданию 12.md
+++ b/ЕГЭ по информатике/Задание 12/Теория по заданию 12.md
@@ -158,11 +158,13 @@ for x in range(1, 60):
 	2. Пусть в строке Y двоек, тогда Y "2" -> Y "1"
 	3. Пусть в строке Z троек, тогда Z "3" -> Z "2231"
 3. Из X единиц, Y двоек и Z троек стало: 
-$$\begin{cases} 
+$$
+\begin{cases} 
 x + y + z = 51\text{ (единиц по условию)} \\
 x + 2z = 29\text{ (двоек по условию)}  \\
 x + z = 23\text{ (троек по условию)}
-\end{cases} \implies z=6 (троек)$$
+\end{cases} \implies z=6 (троек)
+$$
 ---
 
 ### Исполнитель Чертежник
