Update Теория по заданию 12.md

--- a/ЕГЭ по информатике/Задание 12/Теория по заданию 12.md
+++ b/ЕГЭ по информатике/Задание 12/Теория по заданию 12.md
@@ -150,19 +150,28 @@ for x in range(1, 60):
 			break
 			
 ```
-### Аналитическое решение
-1. Здесь "0" выступает в роли каретки и двигается равномерно слева направо 
-2. Подсчет итоговых элементов строки из начальных:
-	1. Пусть в строке X единиц, тогда X "1" -> X "231", так как 
-	   каждый "01"("1") -> "2302"->"2310" -> 231...
-	2. Пусть в строке Y двоек, тогда Y "2" -> Y "1"
-	3. Пусть в строке Z троек, тогда Z "3" -> Z "2231"
-3. Из X единиц, Y двоек и Z троек стало: 
-$$\begin{cases} 
-x + y + z = 51\text{ (единиц по условию)} \\
-x + 2z = 29\text{ (двоек по условию)}  \\
-x + z = 23\text{ (троек по условию)}
-\end{cases} \implies z=6 (троек)$$
+### Аналитическое решение: 
+1. Каждый символ исходной строки преобразуется по правилам:
+   - `0 + 1` → `2302` → `2310` (1 дает 2, 3, 1)
+   - `0 + 2` → `10` (2 дает 1)
+   - `0 + 3` → `201` (3 дает 2, 0, 1)
+
+2. Составляем систему уравнений:
+$$
+\begin{cases} 
+x + y + z = 51 & \text{(единицы)} \\
+x + 2z = 29 & \text{(двойки)} \\
+x + z = 23 & \text{(тройки)}
+\end{cases} 
+$$
+
+3. Решение системы:
+$$
+\begin{aligned}
+x + z &= 23 \implies x = 23 - z \\
+(23 - z) + 2z &= 29 \implies z = 6
+\end{aligned}
+$$
 ---
 
 ### Исполнитель Чертежник
