Update Теория по заданию 12.md

--- a/ЕГЭ по информатике/Задание 12/Теория по заданию 12.md
+++ b/ЕГЭ по информатике/Задание 12/Теория по заданию 12.md
@@ -157,21 +157,24 @@ for x in range(1, 60):
    - `0 + 3` → `201` (3 дает 2, 0, 1)
 
 2. Составляем систему уравнений:
+
 $$
-\begin{cases} 
+\begin{aligned} 
 x + y + z = 51 & \text{(единицы)} \\
 x + 2z = 29 & \text{(двойки)} \\
-x + z = 23 & \text{(тройки)}
-\end{cases} 
+x + z = 23 & \text{(тройки)}.
+\end{aligned} 
 $$
 
 3. Решение системы:
+
 $$
 \begin{aligned}
 x + z &= 23 \implies x = 23 - z \\
-(23 - z) + 2z &= 29 \implies z = 6
+(23 - z) + 2z &= 29 \implies z = 6.
 \end{aligned}
 $$
+
 ---
 
 ### Исполнитель Чертежник
