Update Теория по заданию 15. Аналитическое решение..md

--- a/ЕГЭ по информатике/Задание 15/Теория по заданию 15. Аналитическое решение..md
+++ b/ЕГЭ по информатике/Задание 15/Теория по заданию 15. Аналитическое решение..md
@@ -39,67 +39,49 @@
 **Условие:**  
 Элементами множества $A$ являются натуральные числа. Известно, что выражение 
 
-$$
-((x \in \{1,3,5,7,9,11\}) \to \lnot(x \in \{3,6,9,12\})) \lor (x \in A)
-$$ 
+$$((x \in \{1,3,5,7,9,11\}) \to \lnot(x \in \{3,6,9,12\})) \lor (x \in A)$$ 
 истинно при всех $x$. Определите наименьшее возможное значение суммы элементов множества $A$.
 
 **Решение:**
 1. Обозначим:  
   $P = (x \in \{1,3,5,7,9,11\}), \; Q = (x \in \{3,6,9,12\}), \; A = (x \in A)$.
 2. Перепишем условие:  
-  $$
-   (P \to \lnot Q) \lor A = \lnot P \lor \lnot Q \lor A = \lnot(P \land Q) \lor A = (P \land Q) \to A
-  $$
+  $$(P \to \lnot Q) \lor A = \lnot P \lor \lnot Q \lor A = \lnot(P \land Q) \lor A = (P \land Q) \to A$$
 3. Прочитаем импликацию:  
    Если$x \in \{1,3,5,7,9,11\} \cap \{3,6,9,12\}$, то $x$ должен принадлежать $A$.
 4. Выполним условие:  
-  $$
-   A_{\text{min}} = \{3, 9\}, \; \text{Сумма} = 12
-  $$
+  $$A_{\text{min}} = \{3, 9\}, \; \text{Сумма} = 12$$
 
 ---
 
 #### **Задача 2**
 **Условие:**  
 Элементами множеств $A$ , $P$ и $Q$ являются натуральные числа, причём:  
-$$
-P = \{2, 4, 6, 8, 10, 12, 14, 16, 18, 20\}, \; Q = \{5, 10, 15, 20, 25, 30, 35, 40, 45, 50\}.
-$$ 
+$$P = \{2, 4, 6, 8, 10, 12, 14, 16, 18, 20\}, \; Q = \{5, 10, 15, 20, 25, 30, 35, 40, 45, 50\}.$$ 
 Известно, что выражение  
-$$
-((x \in A) \to (x \in P)) \land ((x \in Q) \to \lnot(x \in A))
-$$ 
+$$((x \in A) \to (x \in P)) \land ((x \in Q) \to \lnot(x \in A))$$ 
 истинно при любом значении переменной $x$. Определите наибольшее возможное количество элементов множества $A$.
 
 **Решение:**
 5. Обозначим:$A = (x \in A), \; P = (x \in P), \; Q = (x \in Q)$.
 6. Перепишем условие:  
-  $$
-   (A \to P) \land (Q \to \lnot A) = (\lnot A \lor P) \land (\lnot Q \lor \lnot A) = \lnot A \lor (P \land \lnot Q) = A \to (P \land \lnot Q).
-  $$
+  $$(A \to P) \land (Q \to \lnot A) = (\lnot A \lor P) \land (\lnot Q \lor \lnot A) = \lnot A \lor (P \land \lnot Q) = A \to (P \land \lnot Q).$$
 7. Прочитаем импликацию:  
    Если$x \in A$, то$x \in P \land x \notin Q$.
 8. Выполним условие:  
-  $$
-   A_{\text{max}} = \{2, 4, 6, 8, 12, 14, 16, 18\}, \; |A| = 8.
-  $$
+  $$A_{\text{max}} = \{2, 4, 6, 8, 12, 14, 16, 18\}, \; |A| = 8.$$
 
 ---
 
 #### **Задача 3**
 **Условие:**  
 Пусть $P$— множество всех 8-битовых цепочек, начинающихся с $11$, $Q$— множество всех 8-битовых цепочек, оканчивающихся на $0$, а $A$— некоторое множество произвольных 8-битовых цепочек. Сколько элементов содержит минимальное множество $A$, при котором для любой 8-битовой цепочки истинно выражение  
-$$
-\neg(x \in A) \to (\neg(x \in P) \lor (x \in Q)).
-$$
+$$\neg(x \in A) \to (\neg(x \in P) \lor (x \in Q)).$$
 
 **Решение:**
 1. Обозначим: $A = (x \in A), \; P = (x \in P), \; Q = (x \in Q)$.
 2. Перепишем условие:  
-  $$
-   \neg A \to (\neg P \lor Q) = A \lor (\neg P \lor Q) = \neg(P \land \lnot Q) \lor A = (P \land \lnot Q) \to A.
-  $$
+  $$\neg A \to (\neg P \lor Q) = A \lor (\neg P \lor Q) = \neg(P \land \lnot Q) \lor A = (P \land \lnot Q) \to A.$$
 3. Прочитаем импликацию:  
    Если $x$ начинается на $11$ и не оканчивается на $0$, то $x \in A$.
 4. Выполним условие:  
@@ -110,16 +92,12 @@ $$
 #### **Задача 4**
 **Условие:**  
 Пусть $\text{ДЕЛ}(n, m)$ — утверждение "натуральное число$n$делится без остатка на натуральное число $m$ ". Для какого наибольшего натурального $A$ формула  
-$$
-\neg\text{ДЕЛ}(x, A) \to ((\text{ДЕЛ}(x, 6) \to \neg\text{ДЕЛ}(x, 9)))
-$$ 
+$$\neg\text{ДЕЛ}(x, A) \to ((\text{ДЕЛ}(x, 6) \to \neg\text{ДЕЛ}(x, 9)))$$ 
 истинна при любом $x$?
 
 **Решение:**
 5. Перепишем формулу:  
-  $$
-   \neg A \to (\text{ДЕЛ}(x, 6) \to \neg\text{ДЕЛ}(x, 9)) = A \lor (\neg\text{ДЕЛ}(x, 6) \lor \neg\text{ДЕЛ}(x, 9)) = \neg(\text{ДЕЛ}(x, 6) \land \text{ДЕЛ}(x, 9)) \lor A.
-  $$
+  $$\neg A \to (\text{ДЕЛ}(x, 6) \to \neg\text{ДЕЛ}(x, 9)) = A \lor (\neg\text{ДЕЛ}(x, 6) \lor \neg\text{ДЕЛ}(x, 9)) = \neg(\text{ДЕЛ}(x, 6) \land \text{ДЕЛ}(x, 9)) \lor A.$$
 6. Прочитаем импликацию:  
    Если $x \vdots 6$ и $x \vdots 9$ , то $x \vdots A$.
 7. Найдём наибольшее$A$:  
