Update Теория по заданию 15. Программное решение..md

--- a/ЕГЭ по информатике/Задание 15/Теория по заданию 15. Программное решение..md
+++ b/ЕГЭ по информатике/Задание 15/Теория по заданию 15. Программное решение..md
@@ -118,9 +118,7 @@ print(len(a), a)
 - $Q = [54; 75]$.
 
 Найти наименьшую возможную длину отрезка $A$, при котором формула:
-$$
-(x \in Q) \to (((x \in P) \equiv (x \in Q)) \lor (\neg(x \in P) \to (x \in A)))
-$$
+$$(x \in Q) \to (((x \in P) \equiv (x \in Q)) \lor (\neg(x \in P) \to (x \in A)))$$
 истинна для любого $x$.
 
 **Решение:**
