Update Теория по задаче 18.md

--- a/ЕГЭ по информатике/Задание 18/Теория по задаче 18.md
+++ b/ЕГЭ по информатике/Задание 18/Теория по задаче 18.md
@@ -114,10 +114,10 @@
 ### Примечания по расчету
 
 #### **1. Количество путей**
-- Количество путей до каждой клетки считается как сумма количества путей из предыдущих клеток:
-  - $\text{Пути}_{i,j} = \text{Пути}_{i-1,j} + \text{Пути}_{i,j-1}$
-  - Если есть диагональное движение:  
-    $\text{Пути}_{i,j} = \text{Пути}_{i-1,j} + \text{Пути}_{i,j-1} + \text{Пути}_{i-1,j-1}$
+Количество путей до каждой клетки считается как сумма количества путей из предыдущих клеток:
+$\text{Пути}_{i,j} = \text{Пути}_{i-1,j} + \text{Пути}_{i,j-1}$
+Если есть диагональное движение:  
+$\text{Пути}_{i,j} = \text{Пути}_{i-1,j} + \text{Пути}_{i,j-1} + \text{Пути}_{i-1,j-1}$
 
 #### **2. Особенности фигур**
 - **Ладья**:  
