Update Задание 19-21. Программное решение.md

--- a/ЕГЭ по информатике/Задание 19-21/Задание 19-21. Программное решение.md
+++ b/ЕГЭ по информатике/Задание 19-21/Задание 19-21. Программное решение.md
@@ -70,7 +70,7 @@ def f(s, m):
 #### **Игра с условием поражения**
 
 ##### **Условие:**
-- Победа: $45 \leq S \leq 112 $ — тот, кто сделал последний ход.
+- Победа: $45 \leq S \leq 112$ — тот, кто сделал последний ход.
 - Поражение: $S > 112$ — текущий игрок проигрывает.
 - Ходы: $+2$, $\times 2$.
 
@@ -89,7 +89,7 @@ def f(s, m):
 
 ##### **Условие:**
 - Ходы: добавить $+1$ в одну из куч или умножить её на 3.
-- Победа:  a + b \geq 45$.
+- Победа:  $a + b \geq 45$.
 
 ```python
 def f(a, b, m):
@@ -110,7 +110,7 @@ def f(a, b, m):
 #### **Две кучи с уменьшением**
 
 ##### **Условие:**
-- Ходы: уменьшить на $ -1 $ или уменьшить вдвое (нечётное число округляется вверх).
+- Ходы: уменьшить на $-1$ или уменьшить вдвое (нечётное число округляется вверх).
 - Победа: $a + b \leq 20$.
 - Начальное состояние: $a = 10$, $b > 10$.
 
@@ -159,7 +159,7 @@ def f(a, b, m):
 ##### **Условие:**
 - Общий запас: $S + T \leq 50$.
 - Победа: $S \geq 41$.
-- Ходы: $+1$, $+2$, $ \times 2$ (если $S \leq 25$).
+- Ходы: $+1$, $+2$, $\times 2$ (если $S \leq 25$).
 
 ```python
 def f(s, m):
