Update Теория по заданию 22. 2024.md

--- a/ЕГЭ по информатике/Задание 22/Теория по заданию 22. 2024.md
+++ b/ЕГЭ по информатике/Задание 22/Теория по заданию 22. 2024.md
@@ -4,9 +4,7 @@
 
 #### **Формула итогового времени выполнения**
 Итоговое время выполнения определяется как:
-$$
-T_{\text{итог}} = T_{\text{процесса}} + \max(T_{\text{ожидания зависимых}})
-$$
+$$T_{\text{итог}} = T_{\text{процесса}} + \max(T_{\text{ожидания зависимых}})$$
 
 Где:
 - $T_{\text{процесса}}$ — время выполнения самого процесса.
@@ -24,7 +22,7 @@ $$
      ```excel
      =C2
      ```
-   - Для зависимых процессов ($D = B + \max(D_{\text{завис\_1}}, D_{\text{завис\_2}})$):
+   - Для зависимых процессов ( $D = B + \max(D\_{\text{завис 1}}, D\_{\text{завис 2}})$ ):
      ```excel
      =B2 + МАКС(ВПР(F2; $A$2:$D$100; 4; 0); ВПР(G2; $A$2:$D$100; 4; 0))
      ```
