Update Теория по заданию 25. Делители.md

--- a/ЕГЭ по информатике/Задание 25/Теория по заданию 25. Делители.md
+++ b/ЕГЭ по информатике/Задание 25/Теория по заданию 25. Делители.md
@@ -53,13 +53,9 @@ def is_prime(x):
 
 ## Основная теорема арифметики
 Любое натуральное число $n > 1$ можно представить в виде произведения простых чисел единственным образом (с точностью до порядка множителей):
-$$
-n = p_{1}^{a_{1}} \cdot p_{2}^{a_{2}} \cdot \dots \cdot p_{k}^{a_{k}},
-$$
+$$n = p_{1}^{a_{1}} \cdot p_{2}^{a_{2}} \cdot \dots \cdot p_{k}^{a_{k}},$$
 где $p_{i}$ — простые числа, $a_{i}$ — их степени.
 
 ## Количество делителей числа
 Если число представлено в виде $n = p_{1}^{a_{1}} \cdot p_{2}^{a_{2}} \cdot \dots \cdot p_{k}^{a_{k}}$, то общее количество его делителей вычисляется по формуле:
-$$
-q = (a_{1} + 1) \cdot (a_{2} + 1) \cdot \dots \cdot (a_{k} + 1).
-$$
+$$q = (a_{1} + 1) \cdot (a_{2} + 1) \cdot \dots \cdot (a_{k} + 1).$$
