--- a/ЕГЭ по информатике/Задание 08/Теория по заданию 8. Аналитическое решение.md
+++ b/ЕГЭ по информатике/Задание 08/Теория по заданию 8. Аналитическое решение.md
@@ -1,20 +1,23 @@
  Общее количество слов = произведению количества способов размещения
- ![[Pasted image 20241229133556.png]]
- 
+ ![Схема решения](../../pic/Pasted%20image%2020241229133556.png)
+
 **Дополнительное условие на размещение**
-![[Pasted image 20241229135851.png]]
+ ![Схема решения](../../pic/Pasted%20image%2020241229135851.png)
+ 
 **Сочетания** - размещение одинаковых предметов
-![[Pasted image 20241229140403.png]]
+ ![Схема решения](../../pic/Pasted%20image%2020241229140403.png)
+
 **Рассмотрение под случаев** 
-![[Pasted image 20250109085823.png]]
-![[Pasted image 20250109085833.png|500]]
-![[Pasted image 20250109090155.png]]
-![[Pasted image 20250109090142.png|500]]
+ ![Схема решения](../../pic/Pasted%20image%2020250109085823.png)
+ ![Схема решения](../../pic/Pasted%20image%2020250109085833.png)
+ ![Схема решения](../../pic/Pasted%20image%2020250109090155.png)
+ ![Схема решения](../../pic/Pasted%20image%2020250109090142.png)
+
 **Перестановки**
-![[Pasted image 20250109090701.png]]
+ ![Схема решения](../../pic/Pasted%20image%2020250109090701.png)
 Из всех возможных слов убираем "Запретные", не забыть, что есть пересечения.
 Есть 2 варианта: подсчет напрямую количества вариантов или подсчет от противного (все варианты - "запретные")
 Задачи с числами: Тоже самое, что и выше, но число не начинается с нуля.
 0 - четное
-![[Pasted image 20250109091930.png]]
-![[Pasted image 20250109091909.png]]
+![Схема решения](../../pic/Pasted%20image%2020250109091930.png)
+![Схема решения](../../pic/Pasted%20image%2020250109091909.png)
