Update Теория по заданию 15. Аналитическое решение..md

--- a/ЕГЭ по информатике/Задание 15/Теория по заданию 15. Аналитическое решение..md
+++ b/ЕГЭ по информатике/Задание 15/Теория по заданию 15. Аналитическое решение..md
@@ -92,8 +92,7 @@ $$\neg(x \in A) \to (\neg(x \in P) \lor (x \in Q)).$$
 
 #### **Задача 4**
 **Условие:**  
-Пусть $\text{ДЕЛ}(n, m)$ — утверждение "натуральное число $n$ делится без остатка на натуральное число $m$ ". Для какого наибольшего натурального $A$ формула  
-$$\neg\text{ДЕЛ}(x, A) \to ((\text{ДЕЛ}(x, 6) \to \neg\text{ДЕЛ}(x, 9)))$$ 
+Пусть $\text{ДЕЛ}(n, m)$ — утверждение "натуральное число $n$ делится без остатка на натуральное число $m$ ". Для какого наибольшего натурального $A$ формула  $$\neg\text{ДЕЛ}(x, A) \to ((\text{ДЕЛ}(x, 6) \to \neg\text{ДЕЛ}(x, 9)))$$ 
 истинна при любом $x$?
 
 **Решение:**
