Update Теория по заданию 2.md

--- a/ЕГЭ по информатике/Задание 02/Теория по заданию 2.md
+++ b/ЕГЭ по информатике/Задание 02/Теория по заданию 2.md
@@ -79,7 +79,7 @@ def logical_function(x, y, z):
 test_cases = [(1, 0, 0), (1, 0, 1)]
 
 # Перебор всех перестановок переменных
-for var_order in permutations('xyz'):
+for row in permutations('xyz'):
     # Проверка для всех тестовых случаев
     results = []
     for case in test_cases:
