Update Теория по заданию 2.md

--- a/ЕГЭ по информатике/Задание 02/Теория по заданию 2.md
+++ b/ЕГЭ по информатике/Задание 02/Теория по заданию 2.md
@@ -108,7 +108,7 @@ for a, b, c, d in product([0, 1], repeat=4):
     # Проверка уникальности строк
     if len(table) == len(set(table)):
         # Перебор возможных порядков переменных
-        for var_order in permutations('xywz'):
+        for row in permutations('xywz'):
             if [f(**dict(zip(p, row))) for row in table]==[1,1,1]:
                 print(*p, sep='')
 ```
