Update Задание 19-21. Программное решение.md

--- a/ЕГЭ по информатике/Задание 19-21/Задание 19-21. Программное решение.md
+++ b/ЕГЭ по информатике/Задание 19-21/Задание 19-21. Программное решение.md
@@ -100,9 +100,10 @@ def f(a, b, m):
 ```
 
 **Пример:**
-- Минимальное $S$, чтобы Ваня выиграл первым ходом после неудачного хода Пети ($m=2$):
+- Минимальное $S$, чтобы Ваня выиграл первым ходом после **неудачного** хода Пети ($m=2$):
   ```python
   print([s for s in range(1, 41) if f(4, s, 2)])  # [7, 19]
+  #!: all -> any в "return any(h) if (m-1) % 2 == 0 else all(h)" 
   ```
 
 ---
