--- a/ЕГЭ по информатике/Задание 19-21/Задание 19-21. Программное решение.md
+++ b/ЕГЭ по информатике/Задание 19-21/Задание 19-21. Программное решение.md
@@ -102,7 +102,7 @@ def f(a, b, m):
 **Пример:**
 - Минимальное $S$, чтобы Ваня выиграл первым ходом после **неудачного** хода Пети ($m=2$):
   ```python
-  print([s for s in range(1, 41) if f(4, s, 2)])  # [7, 19]
+  print([s for s in range(1, 41) if f(4, s, 2)])  # [5...]
   #!: all -> any в "return any(h) if (m-1) % 2 == 0 else all(h)" 
   ```
 
