Update Задание 19-21. Программное решение.md

--- a/ЕГЭ по информатике/Задание 19-21/Задание 19-21. Программное решение.md
+++ b/ЕГЭ по информатике/Задание 19-21/Задание 19-21. Программное решение.md
@@ -221,3 +221,5 @@ def f(s, m, p):
 
 3. **Анализ результатов:**  
    После расчета всех возможных состояний, используйте списковые включения для фильтрации нужных $S$, соответствующих условиям задачи.
+4. **Нестандартные формулировки:**
+  Нестандартные формулировки стоит проверять или решать аналитически (например, 2-й ход Пети неудачный (те. это не решается заменой all->any))
