--- a/ЕГЭ по информатике/Задание 13/Теория по заданию 13.md
+++ b/ЕГЭ по информатике/Задание 13/Теория по заданию 13.md
@@ -13,7 +13,7 @@
 
 - **Адрес сети**:
   - Начальная часть IP-адресов в подсети совпадает.
-  - Адрес сети определяется как результат побитового "И" между IP-адресом и маской подсети.
+  - Адрес сети определяется как результат побитового "И" (&) между IP-адресом и маской подсети.
 
 - **Маска подсети**:
   - Маска записывается как последовательность единиц и нулей (например, `11111111.11111111.11111100.00000000`).
