Update Теория по заданию 13.md

--- a/ЕГЭ по информатике/Задание 13/Теория по заданию 13.md
+++ b/ЕГЭ по информатике/Задание 13/Теория по заданию 13.md
@@ -36,6 +36,9 @@
 - **`net.netmask`**:
   - Возвращает маску сети в стандартной форме (например, `255.255.255.0`).
 
+- **`net.network_address`**:
+  - Возвращает адрес сети.
+
 - **`net[0]` и `net[-1]`**:
   - `net[0]` — первый IP-адрес в сети (адрес сети).
   - `net[-1]` — последний IP-адрес в сети (широковещательный адрес).
